fixed overflow issue

--- a/src/styles/app-layout.scss
+++ b/src/styles/app-layout.scss
@@ -26,7 +26,7 @@
         padding: 5px 10px;
         display: flex;
         flex-direction: column;
-        max-width: 1200px;
+        max-width: 1000px;
         align-self: stretch;
 
         @include respond-to('medium') {
@@ -50,8 +50,10 @@
         display: flex;
         flex-direction: column;
         // background-image: url(/assets/images/digitization.jpg);
+        // background-image: url(/assets/images/bg.jpg);
+        background-size: 100vw 100vh;
         background-repeat: no-repeat;
-        background-position: center;
+        background-position: bottom;
         background-attachment: fixed;
     }
 
