--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -31,5 +31,6 @@ html {
     padding: 0;
     min-height: 100%;
     height: 100%;
+    overflow-x: hidden;
 }
 
